--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.28.6",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "js-cookie": "^3.0.5",
-    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "react": "^18",
