--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.28.6",
     "@tiptap/extension-color": "^2.4.0",
     "@tiptap/extension-text-style": "^2.4.0",
