--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=http://3.220.77.34:3021/api 
+NEXT_PUBLIC_API_URL=https://backend.storytime.social/api
 # http://localhost:3021/api
