--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-quill": "^2.0.0",
+    "sharp": "^0.33.5",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
