--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API_URL=https://backend.storytime.social/api
+NEXT_PUBLIC_API_URL= https://backend.storytime.social/api
 # http://localhost:3021/api
 #https://backend.storytime.social/api
