--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "js-cookie": "^3.0.5",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.330.0",
+    "my-app": "file:",
     "next": "^14.2.3",
     "react": "^18",
     "react-csv": "^2.2.2",
