--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,11 +11,11 @@ on:
 jobs:
   build:
 
-    runs-on: story-time-admin-runner
+    runs-on: self-hosted
 
     strategy:
       matrix:
-        node-version: [18]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
