--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_API_URL=https://backend.storytime.social/api
-# NEXT_PUBLIC_API_URL=http://localhost:3021/api
+# NEXT_PUBLIC_API_URL=http://storytime.yameenyousuf.com/api
